# tpt-libs

./: .gitignore  androidsdk.sh  build-lin.sh  build.sh  common.sh  patchtool.sh  wrapfile.sh
.github/: android-ghactions.ini  build.sh  create-release.sh  force-msys2-bash.sh  get-vtag.py  macaa64-ghactions.ini  prepare.py  wrapfile.sh
.github/workflows/: build.yaml
patches/: bzip2-meson.patch  bzip2-msvc-libname.patch  curl-arm-fseeko.patch  curl-mbedtls-usage.patch  curl-xp-compat.patch  fftw-cmake-version.patch  jsoncpp-xp-compat.patch  libcurl-mbedtls-ws2_32.patch  libcurl-windows-tls-socket.patch  libpng-arm-no-neon.patch  libpng-install-dirs.patch  lua5.1-extern-c.patch  lua5.1-windows-msvc-meson.patch  lua5.2-extern-c.patch  lua5.2-windows-msvc-meson.patch  luajit-android-32b-ftell.patch  luajit-mingw-force-static.patch  luajit-no-export-stdio.patch  luajit-xp-compat.patch  mbedtls-xp-compat.patch  nghttp2-xp-compat.patch  sdl-android-no-bad-warnings.patch  sdl-android-only-powder-so.patch  sdl-fix-haptic-inclusion.patch  sdl-linux-no-input-events.patch  sdl-no-dynapi.patch  x86_64-and-gcc-static  zlib-gz-intmax-visibility.patch  zlib-install-dirs.patch
patches/arm64-and-gcc-static/: SDL2-2.0.20.tar.gz.patch  lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/arm64-mac-gcc-static/: lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/i686-win-msvc-dynamic/: LuaJIT-2.1.0-beta3.tar.gz.patch  SDL2-2.0.20.tar.gz.patch  lua-5.1.5.tar.gz.patch
patches/i686-win-msvc-static/: SDL2-2.0.20.tar.gz.patch  curl-7.68.0.tar.gz.patch  fftw-3.3.8.tar.gz.patch
patches/lin64/: lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/lin64-static/: lua-5.2.4.tar.gz.patch
patches/mac64/: lua-5.2.4.tar.gz.patch
patches/mac64-static/: SDL2-2.0.10.tar.gz.patch  lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/win64/: zlib-1.2.11.tar.gz.patch
patches/win64-dynamic/: LuaJIT-2.1.0-beta3.tar.gz.patch  lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/win64-static/: SDL2-2.0.10.tar.gz.patch  lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/x86_64-lin-gcc-static/: lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/x86_64-mac-gcc-static/: SDL2-2.0.20.tar.gz.patch  lua-5.1.5.tar.gz.patch
patches/x86_64-win-mingw-dynamic/: LuaJIT-2.1.0-beta3.tar.gz.patch  SDL2-2.0.10.tar.gz.patch  SDL2-2.0.20.tar.gz.patch  curl-7.68.0.tar.gz.patch  fftw-3.3.8.tar.gz.patch  lua-5.1.5.tar.gz.patch
patches/x86_64-win-mingw-static/: LuaJIT-2.1.0-beta3.tar.gz.patch  lua-5.2.4.tar.gz.patch
patches/x86_64-win-msvc-dynamic/: SDL2-2.0.10.tar.gz.patch  SDL2-2.0.20.tar.gz.patch
patches/x86_64-win-msvc-static/: lua-5.1.5.tar.gz.patch  lua-5.2.4.tar.gz.patch
zip_stub/: meson.build  meson.template.build  meson_options.txt
zip_stub/arm64-mac-gcc-static/: meson.build  meson_options.txt
zip_stub/i686-win-msvc-static/: meson.build
zip_stub/lin64/: meson.build
zip_stub/lin64-static/: meson.build
zip_stub/mac64/: meson.build
zip_stub/mac64-static/: meson.build
zip_stub/mingw64-static/: meson.build  meson_options.txt
zip_stub/win64/: meson.build
zip_stub/win64-dynamic/: meson.build
zip_stub/win64-static/: meson.build
zip_stub/win64-static/include/: dirent.h
zip_stub/x86_64-lin-gcc-static/: meson.build
zip_stub/x86_64-win-mingw-dynamic/: meson.build
zip_stub/x86_64-win-mingw-static/: meson.build
zip_stub/x86_64-win-msvc-dynamic/: meson.build
